--- a/styles.css
+++ b/styles.css
@@ -236,6 +236,10 @@
     min-width: 30px;
   }
 
+  #home .home-text p{
+    font-size: 20px;
+  }
+
   .profile-photo{
     width: 550px;
     height: 600px;
@@ -365,17 +369,23 @@
   #skills ul {
     display: flex;
     flex-wrap: wrap;
-    gap: 16px;
+    gap: 40px;
     padding: 0;
     list-style: none;
   }
   
   #skills li {
-    padding: 10px 20px;
+    padding: 10px 15px;
     background-color: var(--secondary-dark);
     border-radius: 30px;
     transition: all var(--transition-speed) ease;
     border-left: 3px solid var(--accent-color);
+    min-width: 90px;
+    text-align: center;
+    display: inline-flex;
+    justify-content: center;
+    align-items:center;
+    height: 40px;
   }
   
   #skills li:hover {
@@ -383,6 +393,77 @@
     box-shadow: var(--neon-glow);
   }
   
+  #skills .tech-skills{
+    font-size: 22px;
+    color: var(--accent-color);
+    font-weight: 500;
+    margin-bottom: 20px;
+    display: block;
+  }
+
+  #skills .pro-skills{
+    margin-top: 30px;
+    font-size: 22px;
+    color: var(--accent-color);
+    font-weight: 500;
+    margin-bottom: 25px;
+    display: block;
+  }
+
+/*..........................*/
+      
+      
+    
+      .skill-header {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 15px;
+      }
+      
+      .skill-name {
+        font-weight: 700;
+        font-size: 18px;
+        color: #58a6ff;
+      }
+      
+      .skill-percentage {
+        font-weight: 800;
+      }
+      
+      .skill-bar {
+        height: 10px;
+        background-color: #161b22;
+        border-radius: 4px;
+        overflow: hidden;
+      }
+      
+      .skill-progress {
+        height: 100%;
+        background: linear-gradient(90deg, #58a6ff, #80bdff);
+        border-radius: 4px;
+        transition: width 1.5s ease-in-out;
+      }
+      
+      h3 {
+        color: #58a6ff;
+        font-size: 22px;
+        margin-bottom: 20px;
+        position: relative;
+        display: inline-block;
+      }
+      
+      h3::after {
+        content: '';
+        position: absolute;
+        bottom: -5px;
+        left: 0;
+        width: 40px;
+        height: 3px;
+        background-color: #58a6ff;
+        border-radius: 2px;
+      }
+
+
   body.light-mode #skills li {
     background-color: var(--secondary-light);
     border-left: 3px solid var(--accent-color);
@@ -393,6 +474,9 @@
   }
   
   /* Projects Section */
+  #projects{
+    padding-top: 15px;
+  }
   .projects-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
