--- a/styles.css
+++ b/styles.css
@@ -482,12 +482,13 @@
   
   /* Projects Section */
   #projects{
-    padding-top: 15px;
+    padding-top: 10px;
   }
   .projects-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 30px;
+    gap: 60px;
+    margin-top: 50px;
   }
   
   .project {
