--- a/styles.css
+++ b/styles.css
@@ -651,23 +651,29 @@
   }
   
   /* Services Section */
+  #services{
+    padding-bottom: 50px;
+  }
+
   #services ul {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 20px;
+    gap: 60px;
     padding: 0;
     list-style: none;
+    margin-bottom: 30px;
   }
   
   #services li {
     background-color: var(--secondary-dark);
-    padding: 30px;
+    padding: 20px;
     border-radius: 12px;
     text-align: center;
     transition: all var(--transition-speed) ease;
     position: relative;
     overflow: hidden;
     font-weight: 500;
+    margin-top: 30px;
   }
   
   #services li::before {
