--- a/styles.css
+++ b/styles.css
@@ -88,13 +88,13 @@
     right: 0;
     background-color: rgba(22, 27, 34, 0.95);
     backdrop-filter: blur(10px);
-    padding: 18px 15px;
-    padding-right: 7px;
+    padding: 10px 25px;
+    padding-right: 5px;
     z-index: 100;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
+    justify-content: space-between;
+    align-items:center;
     transition: background-color var(--transition-speed) ease;
   }
   
@@ -102,7 +102,75 @@
     background-color: rgba(240, 240, 240, 0.95);
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
   }
+
+  nav .logo{
+    display: flex;
+    align-items: center;
+    padding-left: 15px;
+  }
+
+  nav .logo a{
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+  }
+
+  .logo-port{
+    font-size: 1.8rem;
+    font-weight: 700;
+    font-family: 'Space Grotesk', sans-serif;
+    color: var(--accent-color);
+  }
+
+  .logo-folio{
+    font-size: 1.4rem;
+    font-weight: 500;
+    color: var(--text-light);
+    transition: all 0.3s ease;
+    position: relative;
+    font-family: 'Space Grotesk', sans-serif;
+  }
+
+  body.light-mode .logo-folio{
+    color: var(--text-dark);
+  }
+
+  .logo a:hover .logo-folio{
+    transform: translateY(-8px);
+    color: var(--accent-color);
+  }
+
+  .logo a:hover .logo-folio::after{
+    content: '';
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: var(--accent-color);
+    animation: slideIn 0.3s forwards;
+  }
+
+  @keyframes slideIn {
+    from{
+      width: 0;
+    }
+    to{
+      width: 100%;
+    }
+  }
+
+  @media (max-width:768px){
+    .logo-port{
+      font-size: 1.8rem;
+    }
+
+    .logo-folio{
+      font-size: 1.2rem;
+    }
+  }
   
+
   nav ul {
     list-style-type: none;
     display: flex;
