--- a/styles.css
+++ b/styles.css
@@ -296,12 +296,14 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    gap: 30px;
+    gap: 60px;
+    /*width: 100%;*/
   }
 
   #home .home-text{
     flex: 1;
     min-width: 30px;
+    max-width: 600px;
   }
 
   #home .home-text p{
@@ -309,7 +311,7 @@
   }
 
   .profile-photo{
-    width: 550px;
+    width: 560px;
     height: 600px;
     border-radius: 30%;
     overflow: hidden;
@@ -317,12 +319,17 @@
     box-shadow: var(--neon-glow);
     animation: floatAnimation 3s ease-in-out infinite;
     position: relative;
+    margin: 0 auto;
+    flex-shrink: 0;
+    margin-left: auto;
+    margin-right: 20px;
   }
 
-  .profile-img{
+  .profile-photo img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    filter: brightness(0.9);
     transition: transform 0.5s;
   }
 
@@ -343,8 +350,9 @@
     }
   @media(max-width:768px){
     #home .home-content {
-        flex-direction: column-reverse;
+        flex-direction: column;
         text-align: center;
+        justify-content: center;
       }
       
       #home .home-text {
