--- a/styles.css
+++ b/styles.css
@@ -311,8 +311,8 @@
   }
 
   .profile-photo{
-    width: 560px;
-    height: 600px;
+    width: 580px;
+    height: 650px;
     border-radius: 30%;
     overflow: hidden;
     border: 3px solid var(--accent-color);
@@ -322,14 +322,14 @@
     margin: 0 auto;
     flex-shrink: 0;
     margin-left: auto;
-    margin-right: 20px;
+    margin-right: 15px;
   }
 
   .profile-photo img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    filter: brightness(0.9);
+    object-fit:contain;
+    filter: brightness(0.8);
     transition: transform 0.5s;
   }
 
